--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<p class="header-subtitle">Верстка на HTML/CSS
 						<br>Разработка сайтов под ключ</p>
 						<div class="header-buttom-block">
-							<button class="header-buttom">Связаться</button>
+							<a href="https://prnt.sc/j1wh4p" class="header-buttom">Связаться</a>
 							<small>*Это бесплатно</small>
 						</div>
 					</div>
@@ -78,7 +78,7 @@
 					<div class="col-md-4">
 						<div class="footer-cta-block">
 							<p class="footer-cta">Напишите мне:</p>
-							<button class="footer-button">Написать</button>
+							<a href="https://prnt.sc/j1wh4p" class="footer-button">Написать</a>
 						</div>
 					</div>
 				</div>
